salesforce-healthcare-demo/force-app/main/default/objects/Enigma_Config__c/Enigma_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Enigma Gateway connection settings for healthcare demo callouts</description>
    <label>Enigma Config</label>
</CustomObject>