salesforce-healthcare-demo/force-app/main/default/objects/Enigma_Config__c/fields/Admin_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Admin_Api_Key__c</fullName>
    <description>Enigma Gateway admin API key for change-governance baselines/evaluate (not the app completions key).</description>
    <label>Admin API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>