salesforce-healthcare-demo/force-app/main/default/objects/Enigma_Config__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>