salesforce-healthcare-demo/force-app/main/default/objects/Enigma_Config__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>