salesforce-healthcare-demo/force-app/main/default/objects/Enigma_Config__c/fields/Default_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Model__c</fullName>
    <label>Default Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>