salesforce-healthcare-demo/force-app/main/default/objects/Enigma_Config__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>